# numbrix9

./: CMakeLists.txt  README.md
headers/: NumbrixBoard.h
include/: Coordinates.h  HybridNumbrixSolver.h  NumbrixBoard.h  NumbrixBoardTracking.h  NumbrixSolver.h  RecursiveNumbrixSolver.h  Segment.h
puzzles/: advanced_may_16_2026.csv  easy_may_19_2026.csv  expert_may_17_2026.csv  intermediate_may_18_2026.csv  simple_4x4.csv
results/: may_22_2026 23:48.txt  may_22_2026_23.48.txt
scripts/: num_path_finder.py  numbrix9.py
src/: HybridNumbrixSolver.cpp  NumbrixBoard.cpp  NumbrixBoardTracking.cpp  NumbrixSolver.cpp  RecursiveNumbrixSolver.cpp  main.cpp
